# editor_sfml

./: CMakeLists.txt  LICENSE.md  README.md  program.py
assets/: this.xml
src/: application.cpp  button.cpp  cdeh.cpp  component.cpp  entry.cpp  events.cpp  main.cpp  scrollbar.cpp  section.cpp  utils.tpp  xml_parser.cpp
src/assets/: this.xml
src/header/: application.hpp  button.hpp  cdeh.hpp  component.hpp  entry.hpp  events.hpp  scrollbar.hpp  section.hpp  std_types.hpp  utils.hpp  xml_parser.hpp
